--- a/JogoVelha.html
+++ b/JogoVelha.html
@@ -8,7 +8,7 @@ ryan
     
     <style>
         body{
-            background-color:burlywood;
+            background-color:rgb(63, 17, 170);
         }
         
         div {
