--- a/JogoVelha.html
+++ b/JogoVelha.html
@@ -400,3 +400,5 @@ function VerificaVitoria(jogador) {
     <!--Foi colocado no final do arquivo para tornar a exibição da página mais rápida-->
 </body>
 </html>
+
+<!--Alterado por Jose-->
